# Wx_Starter

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Accessor.cxx.8219A7C92C595BBF.idx  Accessor.h.14FE79BFD7533AE6.idx  AutoComplete.cxx.D95307E3A54DE1EA.idx  AutoComplete.h.FD7FD91E99801536.idx  CallTip.cxx.EE101823E13E5472.idx  CallTip.h.47B67ACB26114B71.idx  CaseConvert.cxx.E83D8B739C1950D2.idx  CaseConvert.h.52757E96E28C5B62.idx  CaseFolder.cxx.718DBA221FC6F738.idx  CaseFolder.h.08FF5A5380E3FC4C.idx  Catalogue.cxx.4FD7C2605F054B99.idx  Catalogue.h.FB6D3F8237DB9D09.idx  CellBuffer.cxx.737CD99C267BDBEB.idx  CellBuffer.h.3DD1FE1ECD7DAFED.idx  CharClassify.cxx.0D475E2779F5CDA0.idx  CharClassify.h.1941CB3CB296DFF4.idx  CharacterCategory.cxx.BD83B714AA9FB82B.idx  CharacterCategory.h.EED5B0BE390A7D7C.idx  CharacterSet.cxx.525E9FE6471A88FB.idx  CharacterSet.h.F2ADCF32BA614D2D.idx  ContractionState.cxx.2F64C45C5F3B9981.idx  ContractionState.h.987D35967D0F3023.idx  Decoration.cxx.F5AD4477838240D4.idx  Decoration.h.5D07D49E10728615.idx  Document.cxx.B183E041B06118AB.idx  Document.h.55730043137AE41D.idx  EditModel.cxx.69ABD91C87C52B3D.idx  EditModel.h.D7A5907DC1D3FF03.idx  EditView.cxx.8DED62ED60029676.idx  EditView.h.59E9F8B34477B182.idx  Editor.cxx.1C93111AADA77ACE.idx  Editor.h.46FE06C77C8BA976.idx  ExternalLexer.cxx.2FA9A26046EE1F68.idx  ExternalLexer.h.52EBF7E957C14C0E.idx  ILexer.h.77E42334CC766D83.idx  Indicator.cxx.2AF2D873D445D3F8.idx  Indicator.h.2A385EF861D4E5EA.idx  KeyMap.cxx.FC6442F07C426D5F.idx  KeyMap.h.B9ED1653852361D7.idx  LexA68k.cxx.BC719322ECCF035E.idx  (+1638 more)
lib/: README.md
src/: main.cpp
